@@ -45,6 +45,7 @@ GENERATE_TREEVIEW       = YES
 HTML_EXTRA_STYLESHEET   = cdecl.css
 
 ALPHABETICAL_INDEX      = YES
+DISTRIBUTE_GROUP_DOC    = YES
 ENUM_VALUES_PER_LINE    = 1
 FORCE_LOCAL_INCLUDES    = YES
 INTERNAL_DOCS           = YES
