@@ -1,3 +1,3 @@
 declare x as pointer to unsigned width 3 bits
                                  ^
-34: error: bit-field type must be integral
+34: error: bit-fields can be only of integral types
