@@ -1,0 +1,4 @@
+EXPECTED_EXIT=0
+cdecl -xc++ <<END
+declare x as enumeration E width 3 bits
+END
